fix(frontend): Favorites are hard to read due to new font size

--- a/frontend/src/component/ContentListItem.styl
+++ b/frontend/src/component/ContentListItem.styl
@@ -7,9 +7,8 @@
   display flex
   justify-content space-between
   color fontColor
-  height 60px
+  height 65px
   align-items center
-  min-height 65px
   & > *
     margin 0 8px
   &:hover
